setup gh-pages task

--- a/src/index.jade
+++ b/src/index.jade
@@ -4,7 +4,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     
-    title(itemprop="name") Harvest Machine
+    title(itemprop="name") archi2tech - Start Your Career in Tech!
     meta(name="description" content="")
     
     meta(name="viewport" content="width=device-width, initial-scale=1")
