update about me

--- a/src/index.jade
+++ b/src/index.jade
@@ -24,7 +24,12 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | Start your career in tech.
         br
         a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button") Apply for the course
-        span Starts 1. September 2014!
+        .deadline
+          | Starts 1. September 2014
+          br
+          | Only 
+          span.daysleft
+          | left!
 
       .facts
         .fact
@@ -46,8 +51,8 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | Do you want to join the new economy while staying in your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
         br
         br
-        | This will be the
-        em Pioneers
+        | This will be the 
+        em Pioneers 
         | intake, I am looking for the first 50 people who really want to change their careers in the coming months!
         br
         br
@@ -72,8 +77,21 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 About me
-        | In the past two years I changed my career and went from architecture into tech by teaching myself how to code and got a job in a great tech startup - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>.
-        | The goal for this course is simple: what took me 2 years (including one year of bad paid part time work) I'll teach you how to do in one - without quitting your job!
+        .grid-1-2.center
+          img.avatar(src="stefan.jpg" alt="Stefan Ritter")
+          br
+          a(href="https://twitter.com/stefanritr" target="_blank") @stefanritr
+          | &nbsp; | &nbsp;
+          a(href="http://www.stefanritter.com" target="_blank") www.stefanritter.com
+        .grid-1-2
+          | Hi, my name is Stefan. In the past two years I turned my career on its head - I left architecture and went into tech! By teaching myself how to code I got a job in a great startup here in London - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>. Where I am now the lead HTML5 developer working closely with both our CTO and our product manager.
+          br
+          br
+        .grid-1-2
+          | The goal for this course is simple: what took me bumpy 2 years I am going to teach you how to do in one!
+          br
+          br
+          | You will benefit by learning from the mistakes I made when I was getting started. And building on my experience on what skills are needed in the startup scene right now - I will get you ready to make your career switch with confidence.
 
       footer
         h2
