--- a/src/index.jade
+++ b/src/index.jade
@@ -48,7 +48,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 Who is this course for?
-        | Do you want to join the new economy while staying in your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
+        | Do you want to join the new economy but can't just quit your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
         br
         br
         | This will be the 
@@ -64,9 +64,21 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 What will you learn?
-        | My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building <a href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single-page applications</a>, and finish the course with server and database programming in <a href="http://nodejs.org/" target="_blank">Node.js</a> and <a href="http://www.mongodb.org/" target="_blank">MongoDB</a>.
-        | Once a week you will get a task and instructions from me into your inbox. Every week we will learn a new concept and apply it right away to a concrete real life project.
-        | Each month we start a new project. By the end of the year you will have a portfolio of 12 projects and a <a href="https://github.com/" target="_blank">Github</a> account full of open source code to apply for your first job in tech.
+        | My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building 
+        a(href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank") Single-page applications
+        | , and finish the course with server and database programming in 
+        a(href="http://nodejs.org/" target="_blank") Node.js
+        |  and 
+        a(href="http://www.mongodb.org/" target="_blank") MongoDB
+        | . In the final unit you will work on your individual portfolio and we will exercise job applications and interview questions.
+        br
+        br
+        | Once a week you will get a task and instructions delivered simply into your inbox. 
+        | Every week we will learn a new concept and apply it right away to a concrete real life project. 
+        | Should you ever get stuck, I'm always just a short email away to help you succeed.
+        | Each month we are going to start a new project. So that by the end of the course you will have a portfolio of 12 projects and a 
+        a(href="https://github.com/" target="_blank") Github
+        |  account full of open source code ready to apply for your first job in tech.
         br
         br
         a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
