--- a/src/index.jade
+++ b/src/index.jade
@@ -96,7 +96,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           | &nbsp; | &nbsp;
           a(href="http://www.stefanritter.com" target="_blank") www.stefanritter.com
         .grid-1-2
-          | Hi, my name is Stefan. In the past two years I turned my career on its head - I left architecture and went into tech! By teaching myself how to code I got a job in a great startup here in London - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>. Where I am now the lead HTML5 developer working closely with both our CTO and our product manager.
+          | Hi, I'm Stefan. In the past two years I turned my career on its head - I left architecture and went into tech! By teaching myself how to code I got a job in a great startup here in London - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>. Where I am now the lead HTML5 developer working closely with both our CTO and our product manager.
           br
           br
         .grid-1-2
