--- a/src/app.styl
+++ b/src/app.styl
@@ -1,5 +1,6 @@
 body, html
   margin 0
+  font-size 18px
 
 body
   background Black
@@ -7,6 +8,7 @@ body
 
 strong
   font-weight bold
+  font-size 20px
 
 h6
   font-size 28px
