--- a/src/index.jade
+++ b/src/index.jade
@@ -31,7 +31,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           br
           | Only 
           span.daysleft
-          |  left!
+          |  left to join!
 
       .facts
         .fact
@@ -46,7 +46,30 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           strong Price?
           br
           $30 per month - cancel any time.
-      
+      hr
+      section.content
+        h2 Why 12 months?
+        | I know a year sounds long, but this course is for serious career changers who still want to stay in their current jobs! Google's Peter Norvig even argues 
+        a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
+        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will be teaching you in this coming year. 
+        | In the end of this course you will able to confidently produce any application you want for the web. 
+        | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
+        br
+        | Hacking has allot to do with passion for finding new solutions to problems. My goal is to spark in you a curiosity and appreciation for clean, elegant, 
+        | and efficient code. And the course will give you the right tools to go out, discover, and learn new technologies as they appear.
+        br
+        | And should you decide you have had enough input from my side you can cancel the course any time. 
+        | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
+        br
+        br
+        | This will be the 
+        em Pioneers 
+        | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
+        a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
+          | The course will start in only 
+          span.daysleft
+          |, apply now to reserve your seat!
+
       hr
       section.content
         h2 Who is this course for?
@@ -55,9 +78,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         br
         | This will be the 
         em Pioneers 
-        | intake, I am looking for the first 50 people who really want to change their careers in the coming months!
-        br
-        br
+        | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
         a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
           | The course will start in only 
           span.daysleft
@@ -72,13 +93,13 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         a(href="http://nodejs.org/" target="_blank") Node.js
         |  and 
         a(href="http://www.mongodb.org/" target="_blank") MongoDB
-        | . In the final unit you will work on your individual portfolio and we will exercise job applications and interview questions.
+        | . In the final unit you will work on your own individual portfolio, and we will exercise job applications and interview questions.
         br
         br
         | Once a week you will get a task and instructions delivered simply into your inbox. 
         | Every week we will learn a new concept and apply it right away to a concrete real life project. 
         | Should you ever get stuck, I'm always just a short email away to help you succeed.
-        | Each month we are going to start a new project. So that by the end of the course you will have a portfolio of 12 projects and a 
+        | Each month we are going to start a new project, so that by the end of the course you will have a portfolio of 12 projects and a 
         a(href="https://github.com/" target="_blank") Github
         |  account full of open source code ready to apply for your first job in tech.
         br
@@ -105,7 +126,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           | The goal for this course is simple: what took me bumpy 2 years I am going to teach you how to do in one!
           br
           br
-          | You will benefit by learning from the mistakes I made when I was getting started. And building on my experience on what skills are needed in the startup scene right now - I will get you ready to make your career switch with confidence.
+          | You will benefit by learning from the mistakes I made when I was getting started. And based on what skills are needed in the startup scene right now I will get you ready to make your career switch with confidence.
 
       footer
         h2
