--- a/src/index.jade
+++ b/src/index.jade
@@ -56,9 +56,9 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
         br
         | Hacking has allot to do with passion for finding new solutions to problems. My goal is to spark in you a curiosity and appreciation for clean, elegant, 
-        | and efficient code. And the course will give you the right tools to go out, discover, and learn new technologies as they appear.
+        | and efficient code. The course will give you the right tools to go out, discover, and learn new technologies as they appear.
         br
-        | And should you decide you have had enough input from my side you can cancel the course any time. 
+        | Should you decide you have had enough input from my side you can cancel the course any time. 
         | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
         br
         br
