--- a/src/index.jade
+++ b/src/index.jade
@@ -51,7 +51,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         h2 Why 12 months?
         | I know a year sounds long, but this course is for serious career changers who still want to stay in their current jobs! Google's Peter Norvig even argues 
         a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
-        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will be teaching you in this coming year. 
+        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into an efficient one year curriculum. 
         | In the end of this course you will able to confidently produce any application you want for the web. 
         | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
         br
