--- a/src/index.jade
+++ b/src/index.jade
@@ -49,9 +49,11 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 Why 12 months?
-        | I know a year sounds long, but this course is for serious career changers who still want to stay in their current jobs! Google's Peter Norvig even argues 
+        | I know a year sounds long, but this course is for 
+        em serious career changers 
+        | who want to learn next to their current occupation! Google's Peter Norvig argued that 
         a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
-        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into an efficient one year curriculum. 
+        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into a focused, efficient one year curriculum. 
         | In the end of this course you will able to confidently produce any application you want for the web. 
         | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
         br
@@ -62,9 +64,6 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
         br
         br
-        | This will be the 
-        em Pioneers 
-        | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
         a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
           | The course will start in only 
           span.daysleft
@@ -77,7 +76,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         br
         br
         | This will be the 
-        em Pioneers 
+        em pioneers 
         | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
         a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
           | The course will start in only 
@@ -87,7 +86,8 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 What will you learn?
-        | My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building 
+        strong My goal is to teach you all you need to get a job in tech. 
+        | We will start with creating websites, after that we will be building 
         a(href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank") Single-page applications
         | , and finish the course with server and database programming in 
         a(href="http://nodejs.org/" target="_blank") Node.js
