add custom apply

--- a/src/index.jade
+++ b/src/index.jade
@@ -25,7 +25,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         br
         | Start your career in tech.
         br
-        a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button") Apply for the course
+        a(href="/apply.html" class="button") Apply for the course
         .deadline
           | Starts 1. September 2014
           br
@@ -64,7 +64,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
         br
         br
-        a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
+        a(href="/apply.html")
           | The course will start in only 
           span.daysleft
           |, apply now to reserve your seat!
@@ -78,7 +78,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | This will be the 
         em pioneers 
         | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
-        a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
+        a(href="/apply.html")
           | The course will start in only 
           span.daysleft
           |, apply now to reserve your seat!
@@ -104,7 +104,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         |  account full of open source code ready to apply for your first job in tech.
         br
         br
-        a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank")
+        a(href="/apply.html")
           | The course will start in only 
           span.daysleft
           |, apply now to reserve your seat!
@@ -132,7 +132,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         h2
           | Secure your seat today:
           br
-          a(href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button") Apply now
+          a(href="/apply.html" class="button") Apply now
         | Starts 1. September 2014 - only 
         span.daysleft
         |  left!
