--- a/src/apply.jade
+++ b/src/apply.jade
@@ -15,5 +15,12 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    style.
+      body, html {
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
+
   body
-    iframe(src="https://docs.google.com/spreadsheet/embeddedform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" width="100%" height="940" frameborder="0" marginheight="0" marginwidth="0") Loading...
+    iframe(src="https://docs.google.com/spreadsheet/embeddedform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0") Loading...
