--- a/src/app.styl
+++ b/src/app.styl
@@ -29,9 +29,12 @@ hr
   height 0
 
 .avatar
-  margin-top 10px
-  width 80%
-  max-width 250px
+  margin-bottom 20px
+  text-align center
+  img
+    margin-top 10px
+    width 80%
+    max-width 230px
 
 .center
   text-align center
@@ -93,6 +96,12 @@ section
   padding 15px
   text-align left
   line-height 1.8
+
+.text
+  -webkit-columns: 2 320px
+  -moz-columns: 2 320px
+  -ms-columns: 2 320px
+  columns: 2 320px
 
 footer
   color White
