--- a/src/index.jade
+++ b/src/index.jade
@@ -16,8 +16,6 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
     <![endif]-->
 
   body
-    a(href="https://github.com/stefanRitter/archi2tech" target="_blank")
-      img(style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png") 
     .container
       h6 If I could do it, so can you:
       h1
@@ -49,84 +47,94 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       hr
       section.content
         h2 Why 12 months?
-        | I know a year sounds long, but this course is for 
-        em serious career changers 
-        | who want to learn next to their current occupation! Google's Peter Norvig argued that 
-        a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
-        |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into a focused, efficient one year curriculum. 
-        | In the end of this course you will able to confidently produce any application you want for the web. 
-        | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
-        br
-        | Hacking has allot to do with passion for finding new solutions to problems. My goal is to spark in you a curiosity and appreciation for clean, elegant, 
-        | and efficient code. The course will give you the right tools to go out, discover, and learn new technologies as they appear.
-        br
-        | Should you decide you have had enough input from my side you can cancel the course any time. 
-        | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
-        br
-        br
-        a(href="/apply.html")
-          | The course will start in only 
-          span.daysleft
-          |, apply now to reserve your seat!
+        .text
+          | I know a year sounds long, but this course is for 
+          em serious career changers 
+          | who want to learn next to their current occupation! Google's Peter Norvig argued that 
+          a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
+          |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into a focused, efficient one year curriculum. 
+          | In the end of this course you will able to confidently produce any application you want for the web. 
+          | You will know how to navigate and evaluate the current technologies and frameworks, and know to choose the right one for the job.
+          br
+          | Hacking has allot to do with passion for finding new solutions to problems. My goal is to spark in you a curiosity and appreciation for clean, elegant, 
+          | and efficient code. The course will give you the right tools to go out, discover, and learn new technologies as they appear.
+          br
+          | Should you decide you have had enough input from my side you can cancel the course any time. 
+          | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
+          br
+          br
+          a(href="/apply.html")
+            | The course will start in only 
+            span.daysleft
+            |, apply now to reserve your seat!
 
       hr
       section.content
         h2 Who is this course for?
-        | Do you want to join the new economy but can't just quit your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
-        br
-        br
-        | This will be the 
-        em pioneers 
-        | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
-        a(href="/apply.html")
-          | The course will start in only 
-          span.daysleft
-          |, apply now to reserve your seat!
+        .text
+          | Do you want to join the new economy but can't just quit your current job? 
+          | Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. 
+          | So you can do what I did and create a thriving career for yourself in the growing tech sector!
+          br
+          | This will be the 
+          em pioneers 
+          | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
+          br
+          br
+          a(href="/apply.html")
+            | The course will start in only 
+            span.daysleft
+            |, apply now to reserve your seat!
       
       hr
       section.content
         h2 What will you learn?
-        strong My goal is to teach you all you need to get a job in tech. 
-        | We will start with creating websites, after that we will be building 
-        a(href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank") Single-page applications
-        | , and finish the course with server and database programming in 
-        a(href="http://nodejs.org/" target="_blank") Node.js
-        |  and 
-        a(href="http://www.mongodb.org/" target="_blank") MongoDB
-        | . In the final unit you will work on your own individual portfolio, and we will exercise job applications and interview questions.
-        br
-        br
-        | Once a week you will get a task and instructions delivered simply into your inbox. 
-        | Every week we will learn a new concept and apply it right away to a concrete real life project. 
-        | Should you ever get stuck, I'm always just a short email away to help you succeed.
-        | Each month we are going to start a new project, so that by the end of the course you will have a portfolio of 12 projects and a 
-        a(href="https://github.com/" target="_blank") Github
-        |  account full of open source code ready to apply for your first job in tech.
-        br
-        br
-        a(href="/apply.html")
-          | The course will start in only 
-          span.daysleft
-          |, apply now to reserve your seat!
+        .text
+          strong My goal is to teach you all you need to get a job in tech. 
+          | We will start with creating websites, after that we will be building 
+          a(href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank") Single-page applications
+          | , and finish the course with server and database programming in 
+          a(href="http://nodejs.org/" target="_blank") Node.js
+          |  and 
+          a(href="http://www.mongodb.org/" target="_blank") MongoDB
+          | . In the final unit you will work on your own individual portfolio, and we will exercise job applications and interview questions.
+          br
+          br
+          | Once a week you will get a task and instructions delivered simply into your inbox. 
+          | Every week we will learn a new concept and apply it right away to a concrete real life project. 
+          | Should you ever get stuck, I'm always just a short email away to help you succeed.
+          | Each month we are going to start a new project, so that by the end of the course you will have a portfolio of 12 projects and a 
+          a(href="https://github.com/" target="_blank") Github
+          |  account full of open source code ready to apply for your first job in tech.
+          br
+          br
+          a(href="/apply.html")
+            | The course will start in only 
+            span.daysleft
+            |, apply now to reserve your seat!
 
       hr
       section.content
         h2 About me
-        .grid-1-2.center
-          img.avatar(src="stefan.jpg" alt="Stefan Ritter")
+        .text
+          .avatar
+            img(src="stefan.jpg" alt="Stefan Ritter")
+            br
+            a(href="https://twitter.com/stefanritr" target="_blank") @stefanritr
+            | &nbsp; | &nbsp;
+            a(href="http://www.stefanritter.com" target="_blank") www.stefanritter.com
+          | Hi, I'm Stefan. In the past two years I turned my career on its head - I left architecture and went into tech! 
           br
-          a(href="https://twitter.com/stefanritr" target="_blank") @stefanritr
-          | &nbsp; | &nbsp;
-          a(href="http://www.stefanritter.com" target="_blank") www.stefanritter.com
-        .grid-1-2
-          | Hi, I'm Stefan. In the past two years I turned my career on its head - I left architecture and went into tech! By teaching myself how to code I got a job in a great startup here in London - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>. Where I am now the lead HTML5 developer working closely with both our CTO and our product manager.
+          | By teaching myself how to code I got a job in a great startup here in London - the wonderful: 
+          a(href="http://www.escapethecity.org/" target="_blank") Escape The City
+          | . Where I am now the lead HTML5 developer working closely with both our CTO and our product manager.
           br
           br
-        .grid-1-2
           | The goal for this course is simple: what took me bumpy 2 years I am going to teach you how to do in one!
           br
           br
-          | You will benefit by learning from the mistakes I made when I was getting started. And based on what skills are needed in the startup scene right now I will get you ready to make your career switch with confidence.
+          | You will benefit from not having to make the mistakes I made when I was getting started. 
+          | And I will get you ready to make your career switch with confidence, because you will yield all the skills the startup scene is yearning for.
 
       footer
         h2
