--- a/src/index.jade
+++ b/src/index.jade
@@ -48,9 +48,9 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
       section.content
         h2 Why 12 months?
         .text
-          | I know a year sounds long, but this course is for 
+          | I know a year sounds long, this course is for 
           em serious career changers 
-          | who want to learn next to their current occupation! Google's Peter Norvig argued that 
+          | who want to learn while staying in their current occupation! Google's Peter Norvig argues  
           a(href="http://norvig.com/21-days.html" target="_blank") it takes 10 years to become a great programmer.
           |  So what can you learn in a year? Enough to make the switch! It took me two years to learn what I will condense and package for you into a focused, efficient one year curriculum. 
           | In the end of this course you will able to confidently produce any application you want for the web. 
