move h1 and h2 out of container

--- a/src/app.styl
+++ b/src/app.styl
@@ -65,26 +65,26 @@ hr
   color WhiteSmoke
   overflow hidden
 
-  h1
-    letter-spacing 1px
-    font-size 60px
-    margin-bottom 80px
+h1
+  letter-spacing 1px
+  font-size 60px
+  margin-bottom 80px
 
-    .deadline
-      display block
-      margin-top 10px
-      font-size 18px
+  .deadline
+    display block
+    margin-top 10px
+    font-size 18px
 
-  h2
-    cursor pointer
-    letter-spacing 1px
-    margin 0
-    margin-bottom 15px
-    font-size 24px
-    font-weight 400
-    border-bottom 1px dashed LightGray
-    a
-      text-decoration none
+h2
+  cursor pointer
+  letter-spacing 1px
+  margin 0
+  margin-bottom 15px
+  font-size 24px
+  font-weight 400
+  border-bottom 1px dashed LightGray
+  a
+    text-decoration none
 
 .button
   display inline-block
@@ -115,6 +115,9 @@ footer
   padding 15px
   display inline-block
   margin-top 2em
+  
+  h2
+    border 0
 
   .button
     display inline-block
