--- a/src/app.styl
+++ b/src/app.styl
@@ -82,7 +82,6 @@ h2
   margin-bottom 15px
   font-size 24px
   font-weight 400
-  border-bottom 1px dashed LightGray
   a
     text-decoration none
 
@@ -115,9 +114,6 @@ footer
   padding 15px
   display inline-block
   margin-top 2em
-  
-  h2
-    border 0
 
   .button
     display inline-block
@@ -126,9 +122,11 @@ footer
 
 .content
   height 30px
+  margin-top 20px
   overflow hidden
   background WhiteSmoke
-  padding 20px
+  border 1px solid Black
+  padding 10px 20px 20px 20px
 
 .facts
   margin-top 20px
@@ -156,17 +154,17 @@ footer
   h6
     font-size 18px
   
+  h1
+    line-height 1.5
+    margin-top 40px
+    font-size 23px
+
+  h2
+    font-size 20px
+  
   .container
     line-height 1.2
-  
-    h1
-      line-height 1.5
-      margin-top 40px
-      font-size 23px
 
-    h2
-      font-size 20px
-  
   .button
     padding 10px 14px
     margin 30px 0 10px 0
