--- a/src/app.styl
+++ b/src/app.styl
@@ -122,10 +122,10 @@ footer
 
 .content
   height 30px
-  margin-top 20px
+  max-width 800px
+  margin 15px auto
   overflow hidden
   background WhiteSmoke
-  border 1px solid Black
   padding 10px 20px 20px 20px
 
 .facts
