--- a/src/index.jade
+++ b/src/index.jade
@@ -144,8 +144,9 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           | The goal for this course is simple: what took me bumpy 2 years I am going to teach you how to do in one!
           br
           br
-          | You will benefit from not having to make the mistakes I made when I was getting started. 
-          | And I will get you ready to make your career switch with confidence, because you will yield all the skills the startup scene is yearning for.
+          | You will benefit from not having to make the mistakes I made. 
+          | After the course you will yield all the skills the startup scene is yearning for - 
+          | so that you can make your career switch with confidence.
 
       footer
         h2
