use class to toggle sections

--- a/src/app.styl
+++ b/src/app.styl
@@ -127,6 +127,8 @@ footer
   overflow hidden
   background WhiteSmoke
   padding 10px 20px 20px 20px
+  &.open
+    height auto
 
 .facts
   margin-top 20px
