--- a/src/index.jade
+++ b/src/index.jade
@@ -1,19 +1,9 @@
 doctype
 html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
   head
-    meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    
     title(itemprop="name") archi2tech - Start Your Career in Tech!
-    meta(name="description" content="")
-    
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    
-    include _css.jade
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    include shared/_meta.jade
+    include shared/_css.jade
 
   body
     .container
@@ -23,7 +13,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         br
         | start your career in tech.
         br
-        a(href="/apply.html" class="button") Apply for the course
+        a(href="/apply" class="button") Apply for the course
         .deadline
           | Starts 1. September 2014
           br
@@ -68,7 +58,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           | Each month will be a concise topic unit so you can decide each month if you still want to continue along.
           br
           br
-          a(href="/apply.html")
+          a(href="/apply")
             | The course will start in only 
             span.daysleft
             |, apply now to reserve your seat!
@@ -88,7 +78,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           | intake, I am looking for the first 50 people who really want to change their careers in the coming months! 
           br
           br
-          a(href="/apply.html")
+          a(href="/apply")
             | The course will start in only 
             span.daysleft
             |, apply now to reserve your seat!
@@ -117,7 +107,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
           |  account full of open source code ready to apply for your first job in tech.
           br
           br
-          a(href="/apply.html")
+          a(href="/apply")
             | The course will start in only 
             span.daysleft
             |, apply now to reserve your seat!
@@ -152,16 +142,10 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         h2
           | Secure your seat today:
           br
-          a(href="/apply.html" class="button") Apply now
+          a(href="/apply" class="button") Apply now
         | Starts 1. September 2014 - only 
         span.daysleft
         |  left!
     
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-53688224-1', 'auto');
-      ga('send', 'pageview');
+    include shared/_ga.jade
     script(src="app.js" async)
