fix toggle links

--- a/src/index.jade
+++ b/src/index.jade
@@ -9,9 +9,9 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
     .container
       h6 If I could do it, so can you:
       h1
-        | Learn to code the web &amp;
-        br
-        | start your career in tech.
+        //| Learn to Code the Web &amp;
+        //br
+        | Start your Career in Tech.
         br
         a(href="/apply" class="button") Apply for the course
         .deadline
@@ -33,13 +33,12 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         .fact
           strong Price?
           br
-          $30 per month - cancel any time.
+          $30/month - cancel any time.
 
       hr
-
       section.content#why
-        h2
-          a(href="#why")
+        a(href="#why")
+          h2
             | Why 12 months? 
             span.pull-right &searr;
         .text
@@ -64,8 +63,8 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
             |, apply now to reserve your seat!
 
       section.content#who
-        h2
-          a(href="#who")
+        a(href="#who")
+          h2
             | Is this course for you?
             span.pull-right &searr;
         .text
@@ -84,8 +83,8 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
             |, apply now to reserve your seat!
       
       section.content#what
-        h2
-          a(href="#what")
+        a(href="#what")
+          h2
             | What will you learn?
             span.pull-right &searr;
         .text
@@ -113,8 +112,8 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
             |, apply now to reserve your seat!
 
       section.content#instructor
-        h2 
-          a(href="#instructor")
+        a(href="#instructor")
+          h2 
             | About me
             span.pull-right &searr;
         .columns
