--- a/src/app.styl
+++ b/src/app.styl
@@ -57,7 +57,6 @@ hr
 .container
   width 94%
   padding 3%
-  max-width 1000px
   margin auto
   font-family Helvetica, san-serif
   line-height 1.5
@@ -82,8 +81,6 @@ h2
   margin-bottom 15px
   font-size 24px
   font-weight 400
-  a
-    text-decoration none
 
 .button
   display inline-block
@@ -102,7 +99,9 @@ section
   padding 15px
   text-align left
   line-height 1.8
-
+  a:first-of-type
+    text-decoration none
+    
 .columns
   -webkit-columns: 2 320px
   -moz-columns: 2 320px
