fix according to W3 validator

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,7 +14,7 @@ html(lang="en", itemtype="http://schema.org/WebPage" itemscope)
         | Start your Career in Tech.
         br
         a(href="/apply" class="button") Apply for the course
-        .deadline
+        span.deadline
           | a 12 months program
           br
           | for serious career changers.
