--- a/src/shared/_meta.jade
+++ b/src/shared/_meta.jade
@@ -1,7 +1,7 @@
 meta(charset="utf-8")
-meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
-meta(name="description" content="If I could do it, so can you: Learn web development & start your career in tech! A 12 months program for serious career changers. In the past two years I turned my career on its head - I left architecture and went into tech, now it's your turn!")
-meta(name="viewport" content="width=device-width, initial-scale=1")
-<!--[if lt IE 9]>
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+meta(name="description" content="If I could do it, so can you: Learn web development & start your career in tech! A 12 months program for serious career changers. In the past two years I turned my career on its head - I left architecture and went into tech, now it's your turn!")
+meta(name="viewport" content="width=device-width, initial-scale=1")
